--- a/app/src/main/res/layout/mopub_native_ad_view.xml
+++ b/app/src/main/res/layout/mopub_native_ad_view.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:background="@color/darkred"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/mopub_native_ad_layout">
 
@@ -14,24 +15,22 @@
         android:layout_marginEnd="-5dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:contentDescription="Privacy Information Icon image"
+        android:contentDescription="@string/privacy_information_icon_image"
         android:padding="10dp"
-        android:layout_marginRight="-5dp"
-        android:layout_alignParentRight="true"
         app:tint="@android:color/white" />
-
 
     <ImageView
         android:id="@+id/mopub_native_ad_icon"
-        android:background="@null"
-        android:scaleType="centerInside"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="10dp"
+        android:layout_alignBottom="@+id/mopub_native_ad_text"
         android:layout_alignParentStart="true"
-        android:layout_marginLeft="10dp"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@null"
+        android:contentDescription="@string/app_name"
+        android:scaleType="centerInside" />
 
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -44,11 +43,10 @@
         android:textColor="@android:color/white"
         android:textStyle="bold"
         android:textSize="16sp"
-        android:text="Lorem ipsum dolor sit amet, consectetur"
-        android:layout_marginEnd="10dp"
-        android:layout_alignTop="@id/mopub_native_ad_icon"
-        android:layout_toRightOf="@id/mopub_native_ad_icon"
-        android:layout_toLeftOf="@id/mopub_native_ad_privacy" />
+        android:layout_marginTop="12dp"
+        android:text="@string/consectetur"
+        android:layout_marginEnd="12dp"
+        android:layout_alignParentTop="true" />
 
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -59,46 +57,34 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="3dp"
         android:layout_marginEnd="3dp"
+        android:ellipsize="end"
         android:layout_marginBottom="2dp"
-        android:layout_toStartOf="@+id/mopub_native_ad_privacy"
+        android:layout_toStartOf="@+id/mopub_native_ad_cta"
         android:layout_toEndOf="@id/mopub_native_ad_icon"
-        android:lines="2"
-        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua"
+        android:maxLines="2"
+        android:text="@string/aliqua"
         android:textColor="@android:color/white"
-        android:textSize="14sp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="3dp"
-        android:layout_toLeftOf="@+id/mopub_native_ad_privacy"
-        android:layout_toRightOf="@id/mopub_native_ad_icon" />
-
-
-    <ImageView
-        android:id="@+id/mopub_native_ad_main_imageview"
-        android:layout_below="@id/mopub_native_ad_text"
-        android:layout_margin="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/native_main_image_height" />
-
+        android:textSize="14sp" />
 
     <Button
         android:id="@+id/mopub_native_ad_cta"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/button_height"
-        android:layout_marginLeft="10dp"
-        android:layout_below="@id/mopub_native_ad_main_imageview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/mopub_native_ad_text"
+        android:layout_alignParentEnd="true"
         android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
-        android:textAllCaps="false"
         android:focusable="true"
-        android:background="@color/black"
-        android:text="Free to play"
-        android:textSize="@dimen/button_text_size"
         android:minWidth="0dp"
         android:minHeight="0dp"
+        android:padding="6dp"
+        android:text="@string/free_to_play"
+        android:textAllCaps="false"
         android:textColor="@android:color/white"
+        android:textSize="@dimen/button_text_size"
         android:textStyle="bold" />
 
 </RelativeLayout>
